# MeanAudio

./: .gitignore  MeanAudioInfer.py  README.md  demo.py  easyinfer.py  eval.py  infer.py  pyproject.toml  train.py
config/: base_config.yaml  train_config.yaml  train_config_16khz.yaml
config/data/: t5_clap.yaml  t5_clap_16khz.yaml
config/hydra/job_logging/: custom.yaml
meanaudio/: eval_utils.py  runner_flowmatching.py  runner_meanflow.py  sample.py
meanaudio/data/: data_setup.py  extracted_audio.py  mm_dataset.py  utils.py
meanaudio/data/extraction/: vgg_sound.py  wav_dataset.py
meanaudio/ext/: rotary_embeddings.py
meanaudio/ext/autoencoder/: autoencoder.py  vae.py  vae_modules.py
meanaudio/ext/bigvgan/: bigvgan.py  models.py
meanaudio/ext/bigvgan_v2/: bigvgan.py
meanaudio/model/: embeddings.py  flow_matching.py  low_level.py  mean_flow.py  networks.py  sequence_config.py  transformer_layers.py
meanaudio/utils/: dist_utils.py  download_utils.py  email_utils.py  log_integrator.py  logger.py  synthesize_ema.py
scripts/: create_env.sh  extract_audio_latents.sh  pdsh_create_env.sh  pdsh_train_fluxaudio.sh  pdsh_train_fluxaudio_16khz.sh  pdsh_train_meanaudio.sh  pdsh_train_meanaudio_16k.sh  train_mini.sh  train_multinodes.sh
scripts/flowmatching/: eval_flowmatching.sh  infer_flowmatching.sh  train_flowmatching.sh
scripts/meanflow/: eval_meanflow.sh  infer_meanflow.sh  train_meanflow.sh
sets/: latent_mean.pt  latent_mean_44k.pt  latent_std.pt  latent_std_44k.pt  test-audiocaps.tsv
training/: extract_audio_latents.py  partition_clips.py
(+4 files in other folders)
